--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 NEXT_PUBLIC_GOOGLE_API_KEY=AIzaSyAq9L4mRG9lPlDrplm2iHBgTg1HAQamiDU
-NEXT_PUBLIC_API=http://localhost:8080
+NEXT_PUBLIC_API=http://localhost:8080/
