--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
+    "@radix-ui/react-toggle": "^1.0.3",
     "@tanstack/react-table": "^8.12.0",
+    "@types/js-cookie": "^3.0.6",
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^0.2.0",
     "date-fns": "^3.3.1",
+    "js-cookie": "^3.0.5",
     "next": "14.1.0",
     "next-themes": "^0.2.1",
     "react": "^18",
