--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@bitnoi.se/react-scheduler": "^0.2.0",
     "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-collapsible": "^1.0.3",
@@ -34,7 +35,7 @@
     "cmdk": "^0.2.0",
     "date-fns": "^3.3.1",
     "js-cookie": "^3.0.5",
-    "next": "14.1.0",
+    "next": "^14.2.3",
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-day-picker": "^8.10.0",
