--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@syncfusion/ej2-react-schedule": "^25.2.7",
     "@tanstack/react-table": "^8.12.0",
     "@types/js-cookie": "^3.0.6",
     "axios": "^1.6.7",
@@ -32,6 +33,7 @@
     "clsx": "^2.1.0",
     "cmdk": "^0.2.0",
     "date-fns": "^3.3.1",
+    "dayjs": "^1.11.11",
     "js-cookie": "^3.0.5",
     "next": "^14.2.3",
     "next-themes": "^0.2.1",
